Fixes to make things more configurable.
Signed-off-by: Chris Lalancette <clalancette@openrobotics.org>

--- a/cyclonedds/helloworld/CMakeLists.txt
+++ b/cyclonedds/helloworld/CMakeLists.txt
@@ -22,33 +22,33 @@ option(V2TYPE "The type of V2 message to use, options are T1, T2, T3, or T4")
 option(V3TYPE "The type of V3 message to use, options are T1, T2, or T3")
 
 if("${V1TYPE}" STREQUAL "T1")
-  file(COPY_FILE "HelloWorld_v1t1.idl" "HelloWorld_v1.idl")
+  configure_file("HelloWorld_v1t1.idl" "HelloWorld_v1.idl")
 elseif("${V1TYPE}" STREQUAL "T2")
-  file(COPY_FILE "HelloWorld_v1t2.idl" "HelloWorld_v1.idl")
+  configure_file("HelloWorld_v1t2.idl" "HelloWorld_v1.idl")
 elseif("${V1TYPE}" STREQUAL "T3")
-  file(COPY_FILE "HelloWorld_v1t3.idl" "HelloWorld_v1.idl")
+  configure_file("HelloWorld_v1t3.idl" "HelloWorld_v1.idl")
 else()
   message(FATAL_ERROR "V1TYPE must be specified as T1, T2, or T3")
 endif()
 
 if("${V2TYPE}" STREQUAL "T1")
-  file(COPY_FILE "HelloWorld_v2t1.idl" "HelloWorld_v2.idl")
+  configure_file("HelloWorld_v2t1.idl" "HelloWorld_v2.idl")
 elseif("${V2TYPE}" STREQUAL "T2")
-  file(COPY_FILE "HelloWorld_v2t2.idl" "HelloWorld_v2.idl")
+  configure_file("HelloWorld_v2t2.idl" "HelloWorld_v2.idl")
 elseif("${V2TYPE}" STREQUAL "T3")
-  file(COPY_FILE "HelloWorld_v2t3.idl" "HelloWorld_v2.idl")
+  configure_file("HelloWorld_v2t3.idl" "HelloWorld_v2.idl")
 elseif("${V2TYPE}" STREQUAL "T4")
-  file(COPY_FILE "HelloWorld_v2t4.idl" "HelloWorld_v2.idl")
+  configure_file("HelloWorld_v2t4.idl" "HelloWorld_v2.idl")
 else()
   message(FATAL_ERROR "V2TYPE must be specified as T1, T2, T3, or T4")
 endif()
 
 if("${V3TYPE}" STREQUAL "T1")
-  file(COPY_FILE "HelloWorld_v3t1.idl" "HelloWorld_v3.idl")
+  configure_file("HelloWorld_v3t1.idl" "HelloWorld_v3.idl")
 elseif("${V3TYPE}" STREQUAL "T2")
-  file(COPY_FILE "HelloWorld_v3t2.idl" "HelloWorld_v3.idl")
+  configure_file("HelloWorld_v3t2.idl" "HelloWorld_v3.idl")
 elseif("${V3TYPE}" STREQUAL "T3")
-  file(COPY_FILE "HelloWorld_v3t3.idl" "HelloWorld_v3.idl")
+  configure_file("HelloWorld_v3t3.idl" "HelloWorld_v3.idl")
 else()
   message(FATAL_ERROR "V3TYPE must be specified as T1, T2, or T3")
 endif()
@@ -59,7 +59,7 @@ endif()
 # the proper data types and compiles them into a library.
 idlc_generate(
   TARGET HelloWorld_msg_lib
-  FILES "HelloWorld_v1.idl" "HelloWorld_v2.idl" "HelloWorld_v3.idl"
+  FILES "${CMAKE_CURRENT_BINARY_DIR}/HelloWorld_v1.idl" "${CMAKE_CURRENT_BINARY_DIR}/HelloWorld_v2.idl" "${CMAKE_CURRENT_BINARY_DIR}/HelloWorld_v3.idl"
   WARNINGS no-implicit-extensibility
 )
 
